@@ -239,6 +239,7 @@ know what you're doing */
 #define NANO_ENTER_KEY		NANO_CONTROL_M
 #define NANO_FROMSEARCHTOGOTO_KEY NANO_CONTROL_T
 #define NANO_TOFILES_KEY	NANO_CONTROL_T
+#define NANO_APPEND_KEY		NANO_CONTROL_A
 
 #define TOGGLE_CONST_KEY	NANO_ALT_C
 #define TOGGLE_AUTOINDENT_KEY	NANO_ALT_I
@@ -261,10 +262,12 @@ know what you're doing */
 #define SPELL_LIST_LEN 1
 
 #ifndef DISABLE_BROWSER
-#define WRITEFILE_LIST_LEN 2
+#define WRITEFILE_LIST_LEN 3
+#define INSERTFILE_LIST_LEN 2
 #define BROWSER_LIST_LEN 4
 #else
-#define WRITEFILE_LIST_LEN 1
+#define WRITEFILE_LIST_LEN 3
+#define IMSERTFILE_LIST_LEN 1
 #endif
 
 #ifdef HAVE_REGEX_H
